<resources>
    <string name="app_name">AutoCut</string>
    <string name="pick_video">Importer une vidéo</string>
    <string name="start_processing">Lancer l\'AutoCut</string>
    <string name="processing">Traitement en cours…</string>
    <string name="done">Terminé !</string>
    <string name="sensitivity_label">Sensibilité au mouvement</string>
    <string name="min_segment_label">Durée min. de segment (s)</string>
    <string name="no_video_selected">Aucune vidéo sélectionnée</string>
    <string name="share_result">Partager</string>
    <string name="permission_needed">Permission d\'accès aux médias requise</string>
</resources>
